# qwen-code

./: .dockerignore  .env.example  .gitattributes  .gitignore  .lsp.json.example  .npmrc  .ollama-settings-example.json  .pr-body.md  .prettierignore  .qwen-session  AGENTIX_INTEGRATION.md  AGENTS.md  AWESOME_FEATURES.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Code-Base-Index.md  D:\Codebase\polycli\docs\qwen-checkpoint.md  Dockerfile  E2E_TEST_REPORT.md  FORK_SUMMARY.md  HOOKS-INTEGRATION.md  LANGUAGE_SELECTOR_USAGE.md  LANGUAGE_TOOL_INTEGRATION.md  MAINTAINING_FORK.md  Makefile  OLLAMA_CONFIG_EXAMPLE.md  OLLAMA_IMPLEMENTATION_SUMMARY.md  OLLAMA_QUICKSTART.md  OLLAMA_README.md  OLLAMA_SETUP.md  PRODUCTION_README.md  PROJECT_COMPLETE.md  PROJECT_MEMORY_PLAN.md  PR_DESCRIPTION.md  PR_DESCRIPTION_2012.md  PR_DESCRIPTION_2020.md  PR_GUIDE.md  PULL_REQUEST.md  QWEN.md  (+66 more)
.aoneci/: build-standalone.yml  npm-publish.yml  (+6 more)
benchmark-service/: .gitignore  README.md  pyproject.toml
benchmark-service/deploy/: benchmark.ecs.env  benchmark.env.example  docker-daemon.ecs.json  nginx-http.conf  nginx-https.conf.template  nginx-supervisor.conf  qwen-benchmark-dispatch  qwen-benchmark-dispatch.sudoers  qwen-benchmark-release-poller.service  qwen-benchmark-release-poller.timer  supervisord.conf
benchmark-service/qwen_benchmark/: api.py  artifacts.py  auth.py  config.py  harbor_runner.py  models.py  publisher.py  release_poller.py  runner.py  store.py  submit.py  suites.json  worker.py
benchmark-service/tests/: test_api.py  test_harbor_runner.py  test_publisher.py  test_release_poller.py  test_submit.py  test_worker.py
(+1677 files in other folders)
