[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-code-benchmark-service"
version = "0.1.0"
description = "Single-node Qwen Code SWE-bench Verified benchmark service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "PyJWT[crypto]>=2.9,<3",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[project.scripts]
qwen-benchmark-api = "qwen_benchmark.api:main"
qwen-benchmark-worker = "qwen_benchmark.worker:main"
qwen-benchmark-release-poller = "qwen_benchmark.release_poller:main"

[tool.setuptools.package-data]
qwen_benchmark = ["suites.json"]

[tool.setuptools.packages.find]
include = ["qwen_benchmark"]

[tool.pytest.ini_options]
testpaths = ["tests"]
